# sport-timer

./: .env  .gitignore  Cargo.toml  config.toml  diesel.toml  docker-compose.yaml  main.py  pyproject.toml  tmp
migrations/2025-06-12-140745_create_pospres/: down.sql  up.sql
migrations/2025-06-13-121928_add_timestamp/: down.sql  up.sql
src/: face_rec.rs  lib.rs  main.rs  models.rs  python.rs  schema.rs  tracker.rs  video.rs
