[package]
name = "sport-timer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
diesel = { version = "2.2.10", features = ["postgres"] }
dlib-face-recognition = { version = "0.3.2", features = ["build-native", "embed-all"] }
dotenv = "0.15.0"
image = "0.24.9"
opencv = "0.94.4"
pgvector = { version = "0.4.1", features = ["diesel", "serde"] }
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
rand = "0.9.1"
renoir = { git = "https://github.com/chinifabio/renoir.git", branch = "dev-flowunits"}
serde = "1.0.219"
